--- a/IPA remover /IPA remover/Base.lproj/Main.storyboard
+++ b/IPA remover /IPA remover/Base.lproj/Main.storyboard
@@ -747,18 +747,18 @@ DQ
         <scene sceneID="hIz-AP-VOD">
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="IPAViewController" customModule="IPA_remover" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="301"/>
+                    <view key="view" misplaced="YES" id="m2S-Jp-Qdl">
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="276"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F7J-Ib-hdy">
-                                <rect key="frame" x="20" y="91" width="440" height="190"/>
+                                <rect key="frame" x="20" y="91" width="440" height="90"/>
                                 <clipView key="contentView" id="xIg-l2-eHu">
-                                    <rect key="frame" x="1" y="0.0" width="438" height="189"/>
+                                    <rect key="frame" x="1" y="0.0" width="438" height="89"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" headerView="Zbg-7n-kF9" viewBased="YES" id="v9Q-US-r14">
-                                            <rect key="frame" x="0.0" y="0.0" width="438" height="164"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="438" height="64"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -955,7 +955,7 @@ DQ
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="Vhc-yX-oFZ">
-                                <rect key="frame" x="88" y="144" width="321" height="32"/>
+                                <rect key="frame" x="88" y="119" width="321" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="No items found" id="Vq7-0w-Wcq">
                                     <font key="font" usesAppearanceFont="YES"/>
@@ -983,7 +983,7 @@ DQ
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="metaFiles" destination="372-GG-O6e" id="Jra-MM-vNs"/>
+                        <outlet property="metaFilesController" destination="372-GG-O6e" id="Jra-MM-vNs"/>
                         <outlet property="nothingFoundLabel" destination="Vhc-yX-oFZ" id="uCB-Vy-mw4"/>
                         <outlet property="sizeValue" destination="Cct-ig-xgv" id="aME-1E-nv9"/>
                         <outlet property="tableView" destination="v9Q-US-r14" id="2mx-A7-g55"/>
