test commit message from lazy git

--- a/IPA remover /IPA remover/Base.lproj/Main.storyboard
+++ b/IPA remover /IPA remover/Base.lproj/Main.storyboard
@@ -752,13 +752,13 @@ DQ
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F7J-Ib-hdy">
-                                <rect key="frame" x="20" y="91" width="440" height="90"/>
+                                <rect key="frame" x="20" y="91" width="440" height="40"/>
                                 <clipView key="contentView" id="xIg-l2-eHu">
-                                    <rect key="frame" x="1" y="0.0" width="438" height="89"/>
+                                    <rect key="frame" x="1" y="0.0" width="438" height="39"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" headerView="Zbg-7n-kF9" viewBased="YES" id="v9Q-US-r14">
-                                            <rect key="frame" x="0.0" y="0.0" width="438" height="64"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="438" height="19"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -855,7 +855,7 @@ DQ
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
                                                         <tableCellView id="DEK-5z-cZx">
-                                                            <rect key="frame" x="367.5" y="1" width="68" height="17"/>
+                                                            <rect key="frame" x="368" y="1" width="68" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="IPz-XV-Wjn">
@@ -901,7 +901,7 @@ DQ
                                     <rect key="frame" x="1" y="218" width="438" height="16"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
-                                <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="grR-mQ-Oqf">
+                                <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="grR-mQ-Oqf">
                                     <rect key="frame" x="224" y="17" width="15" height="102"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
